fix white space wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -67,4 +67,8 @@ body {
       pointer-events: none;
     }
   }
+
+  & ruby {
+    white-space: pre;
+  }
 }
